--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "eclipse"
     id "maven-publish"
     id "com.github.johnrengelman.shadow" version "5.0.0"
+    id "org.cadixdev.licenser" version "0.5.0"
 }
 
 group "me.shedaniel"
@@ -35,6 +36,17 @@ sourceSets {
         runtimeClasspath += sourceSets.agent.runtimeClasspath
     }
     annotationsInject
+}
+
+license {
+    header = rootProject.file("HEADER")
+
+    ext {
+        name = "shedaniel"
+        year = "2020, 2021"
+    }
+
+    include "**/*.java"
 }
 
 dependencies {
