--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ logger.lifecycle(":building architectury transformer v${version}")
 sourceCompatibility = targetCompatibility = 1.8
 
 repositories {
+    maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.fabricmc.net/" }
     gradlePluginPortal()
 }
@@ -50,7 +51,7 @@ license {
 }
 
 dependencies {
-    implementation "net.fabricmc:tiny-remapper:0.3.2"
+    implementation "net.fabricmc:tiny-remapper:0.3.2-architectury.1"
     implementation "net.fabricmc:tiny-mappings-parser:0.2.2.14"
     implementation "org.ow2.asm:asm:9.1"
     implementation "org.ow2.asm:asm-commons:9.1"
